--- a/templates/template_birthday_2/index.html
+++ b/templates/template_birthday_2/index.html
@@ -284,11 +284,13 @@
             </p>
             <br>
             <p class="text-gray mx-auto text-center">
-                Your presence on my celebration means a lot to me.<br>
-                Cannot wait to see you there!
+              Your presence on my celebration means a lot to me<br>
+              and my family. Cannot wait to see you there! Don’t<br>
+              forget to select the gift you may give from my wishlist,<br>
+              so others will not need to give the same gift as you.
             </p>
             <div class="col-lg-12 text-center pt-5">
-              <a class="button-wishlist" href="wishlist.html">View Wishlist Idea</a>
+              <a class="button-pink" href="wishlist.html">View my gift wishlist!</a>
             </div>
             </div>
         </div>
