--- a/templates/template_birthday_3/index.html
+++ b/templates/template_birthday_3/index.html
@@ -221,11 +221,15 @@
                                             <img class="img-fluid image ml-lg-10p" src="images/popup-02.png" />
                                             <p class="font-bluesky font-lg-21"><b>See you at the celebration!</b></p>
                                             <div class="w-lg-75p ma-lg mb-lg-10p font-grey">
-                                                <p>Your presence on my celebration means a lot to me and my family. Cannot wait to see you there!</p>
+                                                <p>
+                                                    Your presence on my celebration means a lot to me and my family.<br>
+                                                    Cannot wait to see you there! Don’t forget to select the gift you may give<br>
+                                                    from my wishlist, so others will not need to give the same gift as you.<br>
+                                                </p>
                                             </div>
                                             <div class="col-lg-12">
                                                 <a class="button-bluesky text-white py-2 px-3" href="wishlist.html">
-                                                    Wishlist
+                                                    View my gift wishlist!
                                                 </a>
                                             </div>
                                         </div>
@@ -237,7 +241,7 @@
                 </div>
                 <div class="col-lg-12">
                     <a target="_blank" href="Lorem-Ipsum.pdf">Download Invitation</a>
-                    <a href="wishlist.html">View Wishlist Idea</a>
+                    <a href="wishlist.html" class="d-none">View Wishlist Idea</a>
                 </div>
             </div>
         </div>
