--- a/templates/template_birthday_3/wishlist.html
+++ b/templates/template_birthday_3/wishlist.html
@@ -79,34 +79,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-7 pl-m-5p pr-m-5p pl-lg-10p pr-lg-0">
-                    <div class="row">
-                        <div class="col-4 col-lg-4 mb-lg-5p"><a href="" data-toggle="modal" data-target="#wishlist">BABY STROLLER</a></div>
-                        <div class="col-4 col-lg-4 mb-lg-5p"><a href="" data-toggle="modal" data-target="#wishlist">BABY ONESIE</a></div>
-                        <div class="col-4 col-lg-4 mb-lg-5p"><a href="" data-toggle="modal" data-target="#wishlist">DIAPER</a></div>
-                        <div class="col-4 col-lg-4 mb-lg-5p"><a href="" data-toggle="modal" data-target="#wishlist">BABY CLOTHES</a></div>
-                        <div class="col-4 col-lg-4 mb-lg-5p"><a href="" data-toggle="modal" data-target="#wishlist">BABY BOTTLE</a></div>
-                        <div class="col-4 col-lg-4 mb-lg-5p"><a href="" data-toggle="modal" data-target="#wishlist">OTHERS</a></div>
-                        <div class="modal fade" id="wishlist">
-                            <div class="modal-dialog modal-dialog-centered modal-lg">
-                                <div class="modal-content">
-                                    <div class="container-fluid">
-                                        <div class="row">
-                                            <div class="col-lg-12 text-center pl-lg-0 pr-lg-0">
-                                                <a class="close" data-dismiss="modal">
-                                                    <img class="img-fluid icon" src="images/popup-03.png" />    
-                                                </a>
-                                                <img class="img-fluid image ml-lg-10p" src="images/popup-01.png" />
-                                                <p class="font-bluesky font-lg-21"><b>Thank you for the gift!</b></p>
-                                                <div class="w-lg-75p ma-lg mb-lg-10p font-grey">
-                                                    <p>You cannot change the selection, but you could always change your mind about the gift. Remember, your presence is much more important and needed!</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <p class="text-white">
+                        You can choose and select gift ideas from the list below so others<br>
+                        will not need to give the same gift.<br>
+                        <br>
+                        It is not mandatory to give things from this list. If you’re prefer to<br>
+                        give other gift please select the “others” option. Your presence is<br>
+                        much more important and needed.<br>
+                    </p>
                 </div>
             </div>
         </div>
@@ -117,13 +97,74 @@
             <div class="row">
                 <div class="col-lg-12 d-none d-lg-block pl-lg-0 pr-lg-0">
                     <img class="img-fluid w-lg-100p" src="images/wishlist-02.png" />
-                    <div class="boxc text-center">
-                        <div class="mb-lg-50">
-                            <p>You can choose and select gift ideas from the list above so others will not need to give the same gift.</p>
+                    <div class="boxc">
+                        <div class="row">
+                            <div class="col-lg-11 pr-5 text-right">
+                                <h2 class="title ts">
+                                    Choose One!
+                                </h2>
+                            </div>
                         </div>
-                        <div class="line-white w-lg-25p ma-lg mb-lg-50"></div>
-                        <div class="mb-lg-50">
-                            <p>However, It is not mandatory for  you to select one from the list. Your presence is much more important and needed.</p>
+                        <div class="row">
+                            <ul class="list-unstyled">
+                                <li class="item-wishlist">
+                                    <a data-toggle="modal" data-target="#email_wishlist" href="#">
+                                        BABY STROLLER
+                                    </a>
+                                </li>
+                                <li class="item-wishlist">
+                                    <a data-toggle="modal" data-target="#email_wishlist" href="#">
+                                        BABY CLOTHES
+                                    </a>
+                                </li>
+                                <li class="item-wishlist">
+                                    <a data-toggle="modal" data-target="#email_wishlist" href="#">
+                                        PLUSHIES
+                                    </a>
+                                </li>
+                                <li class="item-wishlist">
+                                    <a data-toggle="modal" data-target="#email_wishlist" href="#">
+                                        BABY ONSIE
+                                    </a>
+                                </li>
+                                <li class="item-wishlist">
+                                    <a data-toggle="modal" data-target="#email_wishlist" href="#">
+                                        BABY BOTTLE
+                                    </a>
+                                </li>
+                                <li class="item-wishlist">
+                                    <a data-toggle="modal" data-target="#email_wishlist" href="#">
+                                        BLANKETS
+                                    </a>
+                                </li>
+                                <li class="item-wishlist">
+                                    <a data-toggle="modal" data-target="#email_wishlist" href="#">
+                                        DIAPER
+                                    </a>
+                                </li>
+                                <li class="item-wishlist">
+                                    <a data-toggle="modal" data-target="#email_wishlist" href="#">
+                                        STORY BOOK
+                                    </a>
+                                </li>
+                                <li class="item-wishlist">
+                                    <a data-toggle="modal" data-target="#email_wishlist" href="#">
+                                        FUN TOYS
+                                    </a>
+                                </li>
+                            </ul>
+                            <div class="col-lg-7">
+                                <p class="text-white">
+                                    DIDN’T FIND ONE YOU PREFER? CLICK THIS:
+                                </p>
+                            </div>
+                            <div class="col-lg-5 px-0">
+                                <div class="item-wishlist custom">
+                                    <a href="#">
+                                        Others
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -139,6 +180,60 @@
                         </div>
                     </div>                    
                     <img class="img-fluid w-lg-100p" src="images/mobile-wishlist-04.png" />
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="email_wishlist">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-12 text-center pl-lg-0 pr-lg-0">
+                                <a class="close" data-dismiss="modal">
+                                    <img class="img-fluid icon" src="images/popup-03.png" />    
+                                </a>
+                                <h3 class="font-grey pt-5 mt-5">You choose to give this gift:</h3>
+                                <h2 class="font-bluesky"><strong>BABY STROLLER</strong></h2>
+                                <hr class="bg-muted w-25 my-5">
+                                <div class="w-lg-75p ma-lg font-grey">
+                                    <p>Please input your email address<br>
+                                        to continue the confirmation*</p>
+                                </div>
+                                <div class="form-group px-5 py-4 w-50 mx-auto">
+                                    <input type="text" class="form-control form-text">
+                                </div>
+                                <div class="button-wrap pb-3">
+                                    <a href="#" data-toggle="modal" data-target="#wishlist" data-dismiss="modal" class="button-bluesky">
+                                        Confirm the gift
+                                    </a>
+                                </div>
+                                <p class="text-gray text-center pt-5 font-small">
+                                    <span class="mr-3">*Required</span> Note: you cannot change your gift selection once you’ve confirmed one.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="wishlist">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-12 text-center pl-lg-0 pr-lg-0">
+                                <a class="close" data-dismiss="modal">
+                                    <img class="img-fluid icon" src="images/popup-03.png" />    
+                                </a>
+                                <img class="img-fluid image ml-lg-10p" src="images/popup-01.png" />
+                                <p class="font-bluesky font-lg-21"><b>Thank you for the gift!</b></p>
+                                <div class="w-lg-75p ma-lg mb-lg-10p font-grey">
+                                    <p> Remember, your presence is much more<br>
+                                        important and needed!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
