--- a/templates/template_birthday_1/index.html
+++ b/templates/template_birthday_1/index.html
@@ -308,9 +308,9 @@
                                     <a href="wishlist.html" class="button-default bs pl-lg-30 pr-lg-30">SEE WISHLIST</a>
                                 </div>
                                 <div class="order-1 order-lg-3 col-lg-3 pl-lg-0 pr-lg-0 mtext-center text-right">
-                                    <input type="submit" value="SUBMIT" class="button-pink bs ma-m" data-toggle="modal" data-target="#ebrochure" />
+                                    <a class="button-pink bs ma-m" data-toggle="modal" data-target="#ebrochure" >SUBMIT</a>
                                     <!-- Popup Wishlist -->
-                                    <div class="modal fade" id="wishlist-popup">
+                                    <div class="modal fade" id="ebrochure">
                                         <div class="modal-dialog modal-dialog-centered modal-lg">
                                             <div class="modal-content">
                                                 <div class="container-fluid">
