--- a/templates/template_birthday_2/wishlist.html
+++ b/templates/template_birthday_2/wishlist.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="row choose-one">
-          <div class="col-lg-7">
+          <div class="col-lg-6">
             <div class="wrap-title">
               <h1 class="text-alexa-grey font-allura">
                 Choose
@@ -58,7 +58,95 @@
               </h1>
             </div>
           </div>
+          <div class="col-lg-6 wishlist-content">
+            <ul class="mx-auto d-block">
+              <li>
+                <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                  Flamingo Slippers
+                </a>
+              </li>
+              <li>
+                  <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                    Leather Coin Purse
+                  </a>
+              </li>
+              <li>
+                <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                  Scented Candle
+                </a>
+              </li>
+              <li>
+                <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                  Polaroid
+                </a>
+              </li>
+              <li>
+                <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                  Bath Bombs Kit
+                </a>
+              </li>
+              <li>
+                <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                  Mac’s Lipstick
+                </a>
+              </li>
+              <li>
+                <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                  Typo’s Stationary
+                </a>
+              </li>
+              <li>
+                <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                  Headbands
+                </a>
+              </li>
+              <li>
+                <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                  Acrylic nail art
+                </a>
+              </li>
+              <li>
+                <a href="#" data-toggle="modal" data-target="#popup_wishlist">
+                  Others
+                </a>
+              </li>
+            </ul>
+            <img class="divider" src="images/divider-wishlist-02.png" alt="">
+          </div>
         </div>
+    </div>
+    <div class="modal fade" id="popup_wishlist">
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content popup_1">
+          <h2 class="text-right mr-4 mt-2" data-dismiss="modal">&times;</h2>
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="text-gray font-proxima text-center">
+                      You choose to give this gift:
+                    </h2>
+                    <h2 class="text-gray font-proxima-bold  text-center">
+                      Flamingo Slippers
+                    </h2>
+                    <hr class="bg-muted w-25 my-5">
+                    <h3 class="text-gray font-proxima text-center">
+                      Please input your email address<br>
+                      to continue the confirmation*
+                    </h3>
+                    <div class="form-group px-5 pt-5 pb-4 w-50 mx-auto">
+                      <input type="text" class="form-control input-text">
+                    </div>
+                    <div class="button-wrap text-center">
+                      <a href="#" class="button-pink text-center"  data-dismiss="modal" data-toggle="modal" data-target="#wishlist-submit">
+                        Confirm the gift
+                      </a>
+                    </div>
+                    <p class="text-gray pt-5 text-center font-small">
+                      <span class="mr-3">*Required</span> Note: you cannot change your gift selection once you’ve confirmed one.
+                    </p>
+                </div>
+            </div>
+          </div>
+      </div>
     </div>
     <div class="container-fluid py-3 footer">
       <div class="row">
@@ -82,9 +170,11 @@
       <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content  thank-you">
           <div class="close-div">
-            <h3 class="text-gray" data-dismiss="modal">
-              <i class="fa fa-times" aria-hidden="true"></i>
-            </h3>
+            <a href="index.html" data-dismiss="modal">
+              <h3 class="text-gray" >
+                <i class="fa fa-times" aria-hidden="true"></i>
+              </h3>
+            </a>
           </div>
             <div class="col-lg-12">
             <p class="text-gray font-proxima-bold text-center mb-0">
@@ -93,9 +183,8 @@
             </p>
             <br>
             <p class="text-gray mx-auto text-center">
-                You cannot change the selection, but you could always<br>
-                change your mind about the gift. Remember, your presence<br>
-                is much more important and needed!
+              Remember, your presence is much<br>
+              more important and needed!
             </p>
             </div>
         </div>
