--- a/templates/template_birthday_3/style-birthday-3.css
+++ b/templates/template_birthday_3/style-birthday-3.css
@@ -32,7 +32,7 @@
 	h4{font-size: 26px !important;}
 	p,a,label,th,td,li, input{
 		font-family: "Proxima Nova";
-	  	font-size: 20px;
+	  	font-size: 17px;
 	  	line-height: 29px;
 	  	letter-spacing: 0.4px;
 	  	color: #333333;
@@ -43,6 +43,9 @@
 	.pb-lg-6p{padding-bottom: 6% !important;}
 	.font-gold,.font-gold p{color: #f6c834 !important;}
 	.font-grey,.font-grey p{color: #3C3C3C;}
+	.font-light-grey{
+		color: #aeaeaf;
+	}
 	.font-lightgrey,.font-lightgrey p{color: #AEAEAF !important;}
 	.font-bluesky,.font-bluesky p{color: #79cdd5;}
 	.bg-bluesky{background: #79cdd5;}
@@ -319,7 +322,7 @@
 		border-bottom: 2px solid #f6c834;
 	}
 	#rsvp #ebrochure .modal-content,
-	#wish #wishlist .modal-content{
+	#wish #wishlist .modal-content, #brief-wishlist #wishlist .modal-content, #brief-wishlist #email_wishlist .modal-content{
 		padding: 15px;
 		width: 100%;
 		border-radius: 50px;
@@ -370,11 +373,52 @@
 	}
 	#brief-wishlist{margin-bottom: -3vh;}
 	#brief-wishlist .boxc{
-		left: 40%;
-		width: 27%;
+		left: unset;
+		width: 50%;
 	}
-	
-
+	#brief-wishlist .boxc ul{
+		columns: 3;
+		-webkit-columns: 3;
+		-moz-columns: 3;
+		width: 85%;
+	}
+	#brief-wishlist .boxc .item-wishlist{
+		border: 1px solid #fff;
+		padding: 10px 15px;
+		font-weight: bold;
+		text-align: center;
+		margin-bottom: 15px;
+		transition: all .3s;
+	}
+	#brief-wishlist .boxc .item-wishlist.custom{
+		margin-right: 37%;;
+	}
+	#brief-wishlist .boxc .item-wishlist:hover{
+		background-color: #fff;
+	}
+	#brief-wishlist .boxc .item-wishlist a{
+		color: #fff;
+		letter-spacing: 1.5px;
+	}
+	#brief-wishlist .boxc .item-wishlist:hover a{
+		color: #7aced6;
+	}
+	#brief-wishlist .title{
+		font-family: "Sacramento";
+		font-size: 80px;
+		letter-spacing: 2.4px;
+		color: #fff;
+	}
+	#brief-wishlist #wishlist h2, #brief-wishlist #email_wishlist h2{
+		font-size: 2rem !important;
+	}
+	#brief-wishlist .form-text{
+		border: 2px solid #79cdd5;
+		border-radius: 0;
+	}
+	#brief-wishlist #wishlist .font-small, #brief-wishlist #email_wishlist .font-small{
+		font-size: 12px;
+	}
 @media screen and (max-width: 846px) {
 	p,a,label,th,td,li, input{
 		font-size: 9px !important;
@@ -504,7 +548,7 @@
 		#wishpage footer{margin-top: 3vh;}
 		#brief-wishlist .motif{margin: 0 0 5vh;}
 		#rsvp #ebrochure .modal-content,
-		#wish #wishlist .modal-content{
+		#wish #wishlist .modal-content, #brief-wishlist #wishlist .modal-content, #brief-wishlist #email_wishlist .modal-content{
 			margin: 0 auto;
 			width: 90%;
 		}
