--- a/templates/template_birthday_4/index.html
+++ b/templates/template_birthday_4/index.html
@@ -319,8 +319,8 @@
                                                             from my wishlist, so others will not need to give the same gift as you.
                                                         </p>
                                                     </div>
-                                                    <div class="wrap-button">
-                                                        <a href="#" class="button-cyan">
+                                                    <div class="wrap-button py-5">
+                                                        <a href="wishlist.html" class="button-cyan">
                                                             View my gift wishlist
                                                         </a>
                                                     </div>
