--- a/templates/template_birthday_4/wishlist.html
+++ b/templates/template_birthday_4/wishlist.html
@@ -20,47 +20,6 @@
 </head>
 <body>
     <div id="pagewishlist">
-        <!-- Navbar -->    
-        <nav>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-3 d-none d-lg-block">
-                        <a href="index.html"><img class="img-fluid logo" src="images/logo.png" /></a>
-                    </div>
-                    <div class="col-lg-9 d-none d-lg-block">
-                        <ul class="menu">
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="index.html#about">ABOUT</a></li>
-                            <li><a href="index.html#dateandplace">DATE & PLACE</a></li>
-                            <li><a href="index.html#rsvp">RSVP</a></li>
-                            <li><a href="wishlist.html">WISH LIST</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="row pt-3">
-                    <div class="col-8 d-lg-none">
-                        <a href="index.html"><img class="img-fluid logo" src="images/logo.png" /></a>
-                    </div>
-                    <div class="col-4 d-lg-none text-right">
-                        <h3 class="text-white">
-                            <i class="fa fa-bars"></i>
-                        </h3>
-                    </div>
-                    <div class="side-nav">
-                        <div class="close-div text-right p-3">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                        </div>
-                        <ul class="list-unstyled">
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="index.html#about">ABOUT</a></li>
-                            <li><a href="index.html#dateandplace">DATE & PLACE</a></li>
-                            <li><a href="index.html#rsvp">RSVP</a></li>
-                            <li><a href="wishlist.html">WISH LIST</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
         <!-- Section BANNER -->
         <section id="banner">
             <div class="container-fluid">
@@ -73,7 +32,7 @@
                         <img class="img-fluid w-lg-100p d-none d-lg-block" src="images/images-13.png" />
                         <img class="img-fluid w-lg-100p d-block d-lg-none" src="images/mobile-images-03.png" />
                         <img class="img-fluid w-lg-100p d-none d-lg-block motif" src="images/motif-10.png" />
-                        <img class="img-fluid d-none d-lg-block motif2" src="images/motif-11.png" />
+                        <img class="img-fluid d-none d-lg-block motif2" src="images/motif-top-09.png" />
                         <img class="img-fluid d-block d-lg-none mmotif" src="images/mobile-motif-05.png" />
                         <img class="img-fluid w-lg-100p d-block d-lg-none mmotif2" src="images/mobile-motif-06.png" />
                     </div>
@@ -82,75 +41,118 @@
         </section>
         <!-- Section WISH -->
         <section id="wish">
-            <div class="container-fluid pt-m-40p pb-m-20p pt-lg-20p pl-lg-10p pr-lg-10p">
+            <div class="container-fluid pt-m-40p pb-m-20p pt-lg-10p pl-lg-10p pr-lg-10p">
                 <div class="row">
-                    <div class="col-lg-12 text-center">
+                    <div class="col-lg-6 offset-lg-6 text-center text-center">
                         <p>
-                            Here are the lists that I might need & want.<br />
-                            Select one below that you want to give to me so others won’t need to give me the same gift.
+                            You can choose and select gift ideas from the list below so<br>
+                            others will not need to give the same gift.<br>
                         </p>
                         <p>
-                            It is not a mandatory for you to select one,<br />
-                            your presence is much more important & needed.
+                            It is not mandatory to give things from this list. If you’re prefer<br>
+                            to give other gift please select the “others” option. Your<br>
+                            presence is much more important and needed.<br>
                         </p>
                     </div>
                 </div>
             </div>
         </section>
         <section id="wish2">
-            <div class="container-fluid pt-m-20p pb-lg-10p pl-lg-10p pr-lg-10p">
+            <div class="container-fluid pt-m-20p pb-lg-5p pl-lg-10p pr-lg-10p">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <div class="row pb-5 py-lg-5">
-                            <div class="col-6 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Baby Stroller<div class="line boxc"></div></a>
+                        <div class="row pb-5 pt-lg-15p">
+                            <div class="col-lg-12">
+                                <h2 class="font-darkblue mb-lg-5">
+                                    Choose One!
+                                </h2>
                             </div>
-                            <div class="col-6 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Baby Clothes<div class="line boxc"></div></a>
-                            </div>
-                            <div class="col-6 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Baby Bottles<div class="line boxc"></div></a>
-                            </div>
-                            <div class="col-6 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Diapers<div class="line boxc"></div></a>
-                            </div>
-                            <div class="col-6 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Baby Onesies<div class="line boxc"></div></a>
-                            </div>
-                            <div class="col-6 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Baby Snacks<div class="line boxc"></div></a>
-                            </div>
-                            <div class="col-6 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Formula Milk<div class="line boxc"></div></a>
-                            </div>
-                            <div class="col-6 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Baby Shoes<div class="line boxc"></div></a>
-                            </div>
-                            <div class="col-6 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Baby Toys<div class="line boxc"></div></a>
-                            </div>
-                            <div class="col-6 offset-lg-4 col-lg-4 py-4 py-lg-5">
-                                <a data-toggle="modal" data-target="#ebrochure">Others<div class="line boxc"></div></a>
+                            <div class="row position-realtive z-index-3">
+                                <div class="col-6 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Baby Stroller</a>
+                                </div>
+                                <div class="col-6 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Baby Clothes</a>
+                                </div>
+                                <div class="col-6 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Baby Bottles</a>
+                                </div>
+                                <div class="col-6 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Diapers</a>
+                                </div>
+                                <div class="col-6 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Baby Onesies</a>
+                                </div>
+                                <div class="col-6 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Baby Snacks</a>
+                                </div>
+                                <div class="col-6 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Formula Milk</a>
+                                </div>
+                                <div class="col-6 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Baby Shoes</a>
+                                </div>
+                                <div class="col-6 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Baby Toys</a>
+                                </div>
+                                <div class="col-6 offset-lg-4 col-lg-4 py-4 py-lg-5">
+                                    <a data-toggle="modal" data-target="#ebrochure">Others</a>
+                                </div>
                             </div>
                             <div class="modal fade" id="ebrochure">
                                 <div class="modal-dialog modal-dialog-centered modal-lg">
                                     <div class="modal-content">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-lg-12 text-center pt-m-15p pb-m-10p pt-lg-20p pb-lg-5p pl-lg-0 pr-lg-0">
-                                                    <img class="img-fluid w-lg-100p d-none d-lg-block motif" src="images/motif-12.png" />
+                                                <div class="col-lg-12 text-center pb-m-10p pb-lg-5p pl-lg-0 pr-lg-0">
+                                                    <img class="img-fluid w-lg-100p d-none motif" src="images/motif-12.png" />
                                                     <img class="img-fluid d-block d-lg-none mmotif" src="images/mobile-motif-08.png" />
                                                     <div class="box bs">
                                                         <a class="close button-default" data-dismiss="modal">X</a>
-                                                        <h3 class="mb-m-5 font-krub-r"><span>see you there</span></h3>
-                                                        <h2 class="mb-m-5p">At the Party!</h2>
-                                                        <div class="mt-m-10p font-darkblue">
-                                                            <p>Thank you for giving me one of the gifts on my wish list!</p>
-                                                            <p>
-                                                                Changing your selection is unable,<br />
-                                                                but it’s totally alright if you change your mind about giving me the gift you had selected.
+                                                        <h3 class="mb-m-5 font-krub-r"><span>you choose to give this gift:</span></h3>
+                                                        <h2 class="mb-m-5p mb-lg-5">Baby Snack</h2>
+                                                        <div class="mt-m-10p mt-lg-5">
+                                                            <p>Please input your email address<br> 
+                                                                to continue the confirmation*
                                                             </p>
-                                                            <p>Remember, your presence is much more important & needed.</p>
+                                                            <div class="form-group w-50 mx-auto">
+                                                                <input type="text" name="your-name" class="form-control mb-m-5p" required="">
+                                                            </div>
+                                                            <div class="form-group py-5">
+                                                                <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#ebrochure_thankyou"  class="button-cyan">
+                                                                    Confirm The Gift
+                                                                </a>
+                                                            </div>
+                                                            <p class="font-lightgrey font-small" style="font-size: 13px !important;">
+                                                                <span class="mr-3 font-lightgrey">
+                                                                    *Required
+                                                                </span>
+                                                                Note: you cannot change your gift selection once you’ve confirmed one.
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal fade" id="ebrochure_thankyou">
+                                <div class="modal-dialog modal-dialog-centered modal-lg">
+                                    <div class="modal-content">
+                                        <div class="container-fluid">
+                                            <div class="row">
+                                                <div class="col-lg-12 text-center pb-m-10p pl-lg-0 pr-lg-0">
+                                                    <img class="img-fluid w-lg-100p d-none motif" src="images/motif-12.png" />
+                                                    <img class="img-fluid d-block d-lg-none mmotif" src="images/mobile-motif-08.png" />
+                                                    <div class="box bs  pt-lg-15p pb-lg-15p">
+                                                        <a class="close button-default" data-dismiss="modal">X</a>
+                                                        <h3 class="mb-m-5 font-krub-r"><span>thank you</span></h3>
+                                                        <h2 class="mb-m-5p mb-lg-5">For the Gift</h2>
+                                                        <div class="mt-m-10p mt-lg-5">
+                                                            <p>Remember, your presence is much<br>
+                                                                more important and needed!
+                                                            </p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -160,13 +162,10 @@
                                 </div>
                             </div>
                         </div>
-                        <p>
-                            If you choose others, your gift will be automatically added and crossed out on the list,<br />
-                            preventing the other guests to be giving the same gift as yours.
-                        </p>
                     </div>
                 </div>
             </div>
+            <img class="ornament-bottom" src="images/bottom-ornament-wishlist-08.png" alt="">
         </section>
         <!-- Footer -->
         <footer>
